--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -6,12 +6,19 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(include = TRUE)
 ```
 
 ```{r basicfcn, include=F}
 # can add quietly=T option to the require() function
 loadPkg = function(x) { if (!require(x,character.only=T, quietly =T)) { install.packages(x,dep=T,repos="http://cran.us.r-project.org"); if(!require(x,character.only=T)) stop("Package not found") } }
+```
+
+```{r, packages, include = F}
+library(ggplot2)
+library(viridis)
+library(viridisLite)
 ```
 
 ## Section 1: Introduction
@@ -44,7 +51,6 @@ The Google Play Store dataset contains records for 10,840 different apps.  The v
 * **Current Ver** - Current version of the app
 
 ```{r import Google Play Data, echo=F}
-setwd("/Users/jonathangiguere/Desktop/DATS 6101/Projects/Project 1/Data-Science-Project-1")
 googlePlay <- read.csv('googleplaystore.csv')
 str(googlePlay)
 ```
@@ -69,7 +75,49 @@ The Apple App Store dataset contains records for 7,197 different apps.  The vari
 * **Current Ver** - Current version of the app
 
 ```{r import Apple Store Data, echo=F}
-setwd("/Users/jonathangiguere/Desktop/DATS 6101/Projects/Project 1/Data-Science-Project-1")
 appleStore <- read.csv('applestore.csv')
 str(appleStore)
+```
+
+## Section 3: App Store Vs. Google Playstore
+
+Even though the App Store is going to be analyzed in this report, a comparative analysis will be made before between the App Store and Google Playstore. This will serve as a guide to the structure of each platform and provide a visual comparison between the two.
+
+The Appstore dataset contains 7197 different apps whereas the Google Playstore contains 10840.
+
+```{r merge}
+
+```
+
+### 3.1 Rating Composition
+
+```{r box1}
+df1 <- data.frame(appleStore$price)
+df2 <- data.frame(googlePlay$Price)
+df3 <- rbind(df1, df2)
+ggplot(appleStore, aes(y = price)) +
+  geom_boxplot()
+```
+
+### 3.2 Rating Distribution of Apps
+
+```{r hist}
+hist(googlePlay$Rating, main = 'Histogram of frequency rating for the Google Playstore', xlab = 'Rating', col = viridis(20))
+hist(appleStore$user_rating, main = 'Histogram of frequency rating for the Apple Store', xlab = 'Rating', col = viridis(12))
+```
+
+### 3.3 Price Composition
+
+```{r box2}
+```
+
+### 3.4 Free Vs. Paid
+
+```{r pie}
+appleStore$Type <- factor(ifelse(appleStore$price == 0.00, 0, 1), labels = c('Free', 'Paid'))
+
+ggplot(appleStore, aes(x = " ", y=Type, fill = Type)) +
+  geom_bar(width = 1, stat = "identity") +
+  coord_polar("y", start=0) +
+  theme_void()
 ```
